--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -31,7 +31,7 @@ html.no-js(lang='{{ language }}', ng-app='ministryApp', ng-csp, ng-cloak)
                                 p {{ "House-to-house records" | translate }}
             md-content(flex)
                 div(layout='column', layout-fill)
-                    md-toolbar.main-nav(md-scroll-shrink)
+                    md-toolbar.main-nav
                         .md-toolbar-tools
                             md-button.icon(ng-click='toggleNav()', hide-gt-sm)
                                 i.fa.fa-bars
