--- a/src/jade/views/report.jade
+++ b/src/jade/views/report.jade
@@ -1,4 +1,4 @@
-md-content(layout='column', layout-fill, layout-padding, ng-swipe-left='nextMonth()', ng-swipe-right='prevMonth()')
+md-content(layout='column', layout-fill, ng-swipe-left='nextMonth()', ng-swipe-right='prevMonth()')
     md-toolbar.nav-submenu
         .md-toolbar-tools(layout='row', layout-fill)
             md-button(ng-click='prevMonth()')
