--- a/src/jade/views/calendar.jade
+++ b/src/jade/views/calendar.jade
@@ -1,5 +1,5 @@
 
-md-content(layout='column', layout-fill, layout-padding)
+md-content(layout='column', layout-fill)
     md-toolbar.nav-submenu(ng-swipe-right='prevDay()', ng-swipe-left='nextDay()')
         .md-toolbar-tools(layout='row', layout-fill)
             md-button(ng-click='prevDay()')
@@ -90,5 +90,7 @@ md-content(layout='column', layout-fill, layout-padding)
                                 span.fa.fa-plus.link
             md-item
                 md-item-content
-                    .md-tile-content(layout='row', layout-fill)
-                        md-text-float(flex, label='{{ "Notes" | translate }}', ng-model='day.n')
+                    div(layout='row', layout-fill)
+                        md-input-container(flex)
+                            label {{ "Notes" | translate }}
+                            textarea(ng-model='day.n')
