--- a/src/jade/offline.jade
+++ b/src/jade/offline.jade
@@ -8,7 +8,7 @@ html.no-js
         meta(name='viewport', content='width=device-width, initial-scale=1')
         link(rel='stylesheet', href='css/app.css')
         style h3 span { margin-right: 0; }
-    body(layout='column', layout-fill, md-theme="light-green", ng-controller='HomeCtrl')
+    body(layout='column', layout-fill, md-theme="light-green")
         section(layout='column', layout-fill, layout-align='center center')
             div
                 h3(style='text-center')
