--- a/src/jade/views/calendar.jade
+++ b/src/jade/views/calendar.jade
@@ -3,11 +3,21 @@ md-content(layout='column', layout-fill)
     md-toolbar.nav-submenu(ng-swipe-right='prevDay()', ng-swipe-left='nextDay()')
         .md-toolbar-tools(layout='row', layout-fill)
             md-button(ng-click='prevDay()')
-                span.fa.fa-caret-left
-            md-button(flex, ng-click='goToReport()') {{ "Go to report" | translate }}
+                i.fa.fa-caret-left
+                md-tooltip {{ "Previous day" | translate }}
+            md-button(flex, ng-click='showCalendar()')
+                i.fa.fa-calendar(hide-gt-sm)
+                span(hide-sm) &nbsp; {{ "Select date" | translate }}
+                md-tooltip {{ "Select date" | translate }}
+            md-button(flex, ng-click='goToReport()')
+                i.fa.fa-calculator(hide-gt-sm)
+                span(hide-sm) &nbsp; {{ "Go to report" | translate }}
+                md-tooltip {{ "Go to report" | translate }}
             md-button(ng-click='nextDay()')
-                span.fa.fa-caret-right
-    md-subheader.md-primary(ng-swipe-right='prevDay()', ng-swipe-left='nextDay()') {{ date|dateLocale:'EEEE, MMMM d, yyyy' }}
+                i.fa.fa-caret-right
+                md-tooltip {{ "Next day" | translate }}
+    md-subheader.md-primary(ng-swipe-right='prevDay()', ng-swipe-left='nextDay()')
+        span {{ date|dateLocale:'EEEE, MMMM d, yyyy' }}
     md-content
         md-list.padded
             md-item
@@ -19,8 +29,10 @@ md-content(layout='column', layout-fill)
                         div(hide-sm)
                             md-button(ng-show='day.h', ng-click='increment("h", -1)')
                                 span.fa.fa-minus
+                                md-tooltip {{ "Subtract" | translate }}
                             md-button(ng-click='increment("h", 1)')
                                 span.fa.fa-plus
+                                md-tooltip {{ "Add" | translate }}
             md-item
                 md-item-content(ng-swipe-left='increment("p", -1)', ng-swipe-right='increment("p", 1)')
                     .md-tile-left {{ day.p }}
@@ -30,8 +42,10 @@ md-content(layout='column', layout-fill)
                         div(hide-sm)
                             md-button(ng-show='day.p', ng-click='increment("p", -1)')
                                 span.fa.fa-minus
+                                md-tooltip {{ "Subtract" | translate }}
                             md-button(ng-click='increment("p", 1)')
                                 span.fa.fa-plus
+                                md-tooltip {{ "Add" | translate }}
             md-item
                 md-item-content(ng-swipe-left='increment("m", -1)', ng-swipe-right='increment("m", 1)')
                     .md-tile-left {{ day.m }}
@@ -41,8 +55,10 @@ md-content(layout='column', layout-fill)
                         div(hide-sm)
                             md-button(ng-show='day.m', ng-click='increment("m", -1)')
                                 span.fa.fa-minus.link
+                                md-tooltip {{ "Subtract" | translate }}
                             md-button(ng-click='increment("m", 1)')
                                 span.fa.fa-plus.link
+                                md-tooltip {{ "Add" | translate }}
             md-item
                 md-item-content(ng-swipe-left='increment("t", -1)', ng-swipe-right='increment("t", 1)')
                     .md-tile-left {{ day.t }}
@@ -52,8 +68,10 @@ md-content(layout='column', layout-fill)
                         div(hide-sm)
                             md-button(ng-show='day.t', ng-click='increment("t", -1)')
                                 span.fa.fa-minus.link
+                                md-tooltip {{ "Subtract" | translate }}
                             md-button(ng-click='increment("t", 1)')
                                 span.fa.fa-plus.link
+                                md-tooltip {{ "Add" | translate }}
             md-item
                 md-item-content(ng-swipe-left='increment("b", -1)', ng-swipe-right='increment("b", 1)')
                     .md-tile-left {{ day.b }}
@@ -63,8 +81,10 @@ md-content(layout='column', layout-fill)
                         div(hide-sm)
                             md-button(ng-show='day.b', ng-click='increment("b", -1)')
                                 span.fa.fa-minus.link
+                                md-tooltip {{ "Subtract" | translate }}
                             md-button(ng-click='increment("b", 1)')
                                 span.fa.fa-plus.link
+                                md-tooltip {{ "Add" | translate }}
             md-item
                 md-item-content(ng-swipe-left='increment("r", -1)', ng-swipe-right='increment("r", 1)')
                     .md-tile-left {{ day.r }}
@@ -74,8 +94,10 @@ md-content(layout='column', layout-fill)
                         div(hide-sm)
                             md-button(ng-show='day.r', ng-click='increment("r", -1)')
                                 span.fa.fa-minus.link
+                                md-tooltip {{ "Subtract" | translate }}
                             md-button(ng-click='increment("r", 1)')
                                 span.fa.fa-plus.link
+                                md-tooltip {{ "Add" | translate }}
 
             md-item
                 md-item-content(ng-swipe-left='increment("s", -1)', ng-swipe-right='increment("s", 1)')
@@ -86,8 +108,10 @@ md-content(layout='column', layout-fill)
                         div(hide-sm)
                             md-button(ng-show='day.s', ng-click='increment("s", -1)')
                                 span.fa.fa-minus.link
+                                md-tooltip {{ "Subtract" | translate }}
                             md-button(ng-click='increment("s", 1)')
                                 span.fa.fa-plus.link
+                                md-tooltip {{ "Add" | translate }}
             md-item
                 md-item-content
                     div(layout='row', layout-fill)
