Updated language selector, fixed totals bug

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1735,6 +1735,9 @@ md-toolbar .md-button img, .md-toolbar-tools .md-button img {
 .md-dialog-container {
   background: rgba(0, 0, 0, 0.5); }
 
+md-content {
+  overflow-x: hidden; }
+
 md-dialog.calendar {
   max-width: 90%;
   min-width: 0;
@@ -1746,3 +1749,26 @@ md-dialog.calendar {
 md-tooltip.md-show {
   background: #fff;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26); }
+
+textarea[auto-grow].md-input {
+  -webkit-flex: auto !important;
+      -ms-flex: auto !important;
+          flex: auto !important;
+  min-height: 2em; }
+
+.md-subheader.md-primary {
+  background: #f9f9f9;
+  border-bottom: 1px solid #eee;
+  margin-right: 0; }
+
+md-slider .md-track {
+  background: #ccc; }
+md-slider .md-track.md-track-fill, md-slider .md-thumb:after {
+  background: #8BC34A; }
+md-slider .md-thumb:after {
+  border-color: #8BC34A; }
+
+.slider-container {
+  margin-bottom: 1em; }
+  .slider-container label {
+    padding-top: 1em; }
