--- a/app/platforms/android/res/xml/config.xml
+++ b/app/platforms/android/res/xml/config.xml
@@ -1,12 +1,12 @@
 <?xml version='1.0' encoding='utf-8'?>
-<widget id="com.bitola.service" version="0.0.1" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
+<widget id="com.bitola.service" version="0.1.7" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
     <preference name="loglevel" value="DEBUG" />
-    <name>ServiceCalendar</name>
+    <name>Service</name>
     <description>
         An open source field service time tracking app.
     </description>
     <author email="inbox@bitola.co" href="https://bitola.co">
-        Bitola Software Company
+        Bitola Software Co.
     </author>
     <content src="index.html" />
     <access origin="*" />
