--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -1,9 +1,9 @@
 doctype html
-html.no-js(lang='{{ language }}', ng-app='ministryApp', ng-csp, ng-cloak)
+html.no-js(lang='{{ language.current }}', ng-app='ministryApp', ng-csp, ng-cloak)
     head
         meta(charset='utf-8')
         meta(http-equiv='X-UA-Compatible', content='IE=edge')
-        title {{ "Service App" | translate }}
+        title {{ "Service App" | translate:language.translator.current }}
         meta(name='description', content='')
         meta(name='viewport', content='width=device-width,initial-scale=1,maximum-scale=1')
         link(rel='icon', href='img/logo.svg', sizes='any')
@@ -12,48 +12,52 @@ html.no-js(lang='{{ language }}', ng-app='ministryApp', ng-csp, ng-cloak)
         section(layout='row', layout-fill, flex)
             md-sidenav.md-sidenav-left.md-whiteframe-z1(md-component-id='left', md-is-locked-open="$media('gt-sm')")
                 md-toolbar
-                    h1.md-toolbar-tools
-                        div(ng-click='go("/")') {{ "Navigation" | translate }}
-                        div(flex)
+                    .md-toolbar-tools
+                        h3(flex) {{ "Navigation" | translate:language.translator.current }}
                         md-button.icon(hide-gt-md, ng-click='closeNav()', aria-label='Close nav')
                             span.fa.fa-times
                 md-content
                     md-list
                         md-item.link.padded
-                            md-item-content(ng-click='go("/calendar")')
-                                p
+                            md-item-content
+                                a(href='#/calendar')
                                     i.fa.fa-fw.fa-calendar
-                                    | {{ "Calendar" | translate }}
+                                    | {{ "Calendar" | translate:language.translator.current }}
+                            md-divider
                         md-item.link.padded
-                            md-item-content(ng-click='go("/report")')
-                                p
+                            md-item-content
+                                a(href='#/report')
                                     i.fa.fa-fw.fa-calculator
-                                    | {{ "Report" | translate }}
+                                    | {{ "Report" | translate:language.translator.current }}
+                            md-divider
                         md-item.link.padded
-                            md-item-content(ng-click='go("/return-visits")')
-                                p
+                            md-item-content
+                                a(href='#/return-visits')
                                     i.fa.fa-fw.fa-users
-                                    | {{ "Return visits" | translate }}
+                                    | {{ "Return visits" | translate:language.translator.current }}
+                            md-divider
                         md-item.link.padded
-                            md-item-content(ng-click='go("/records")')
-                                p
-                                    i.fa.fa-fw.fa-building
-                                    | {{ "House-to-house records" | translate }}
+                            md-item-content
+                                a(href="#/settings")
+                                    i.fa.fa-fw.fa-cogs
+                                    | {{ "Settings" | translate:language.translator.current }}
+                            md-divider
                         md-item.link.padded
-                            md-item-content(ng-click='go("/language")')
-                                p
-                                    i.fa.fa-fw.fa-language
-                                    | {{ "Language" | translate }}
+                            md-item-content
+                                a(href='https://github.com/BitolaCo/service-app/issues')
+                                    i.fa.fa-fw.fa-question
+                                    | {{ "Help" | translate:language.translator.current }}
+                            md-divider
             md-content(flex, layout='row')
                 div(layout='column', layout-fill)
                     md-toolbar.main-nav
                         .md-toolbar-tools
                             md-button.icon(ng-click='toggleNav()', hide-gt-sm, aria-label='Toggle side nav')
                                 i.fa.fa-bars
-                            md-button(flex, ng-click='go("/")', hide-gt-sm, aria-label='Service App') {{ "Service App" | translate }}
-                            md-button.icon.text-left(flex, ng-click='go("/")', hide-sm, aria-label='Service App')
-                                img(src='/img/logo.svg', alt='Service Calendar')
-                                div.app-title {{ "Service App" | translate }}
+                            h3.text-center(flex, hide-gt-sm, aria-label='Service App') {{ "Service App" | translate:language.translator.current }}
+                            h3.text-left.app-title(flex, hide-sm, aria-label='Service App')
+                                img(src='/img/logo.svg', alt='{{ "Service App" | translate:language.translator.current }}')
+                                span {{ "Service App" | translate:language.translator.current }}
                             md-button(ng-click='go("/calendar")', aria-label='Calendar')
                                 i.fa.fa-calendar
                     md-content(ng-view, layout='column', layout-fill, flex)
