--- a/src/jade/views/records.jade
+++ b/src/jade/views/records.jade
@@ -1,5 +1,5 @@
 md-content(flex, layout='column', layout-fill)
-    md-subheader.md-primary {{ "House-to-house records" | translate }}
+    md-subheader.md-primary {{ "House-to-house records" | translate:language.translator.current }}
     md-list.padded
         md-item
             md-item-content
