--- a/app/www/partials/calendar.html
+++ b/app/www/partials/calendar.html
@@ -1,1 +1,1 @@
-<md-dialog aria-label="Select date" class=calendar><md-content><div id=calendar></div></md-content><div layout=row class=md-actions><md-button ng-click=cancel()>Cancel</md-button></div></md-dialog>
+<md-dialog aria-label="Select date" class="calendar"><md-content><div id="calendar"></div></md-content><div layout="row" class="md-actions"><md-button ng-click="cancel()">Cancel</md-button></div></md-dialog>
