--- a/src/jade/views/report.jade
+++ b/src/jade/views/report.jade
@@ -2,31 +2,41 @@ md-content(layout='column', layout-fill, ng-swipe-left='nextMonth()', ng-swipe-r
     md-toolbar.nav-submenu
         .md-toolbar-tools(layout='row', layout-fill)
             md-button(ng-click='prevMonth()') &laquo;
-            h2.text-center(flex) {{ date|dateLocale:'MMMM yyyy' }}
+            h3.text-center(flex) {{ date|dateLocale:'MMMM yyyy' }}
             md-button(ng-click='nextMonth()') &raquo;
-    md-subheader.md-primary {{ "Monthly report" | translate }}
+    md-subheader.md-primary {{ "Monthly report" | translate:language.translator.current }}
     md-list.padded
         md-item
             md-item-content
-                span.fa-fw {{ month.h }}
+                span.fa-fw {{ month.h || 0 }}
                 | {{ "Hours" | translate:lang }}
+            md-divider
         md-item
             md-item-content
-                span.fa-fw {{ month.p }}
+                span.fa-fw {{ month.p || 0 }}
                 | {{ "Hours (planned)" | translate:lang }}
+            md-divider
+        md-item
+            md-item-content
+                span.fa-fw {{ month.m || 0 }}
+                | {{ "Magazines" | translate:lang }}
+            md-divider
         md-item
             md-item-content
                 span.fa-fw {{ month.t }}
-                | {{ "Tracts & brochures" | translate }}
+                | {{ "Tracts & brochures" | translate:language.translator.current }}
+            md-divider
         md-item
             md-item-content
-                span.fa-fw {{ month.b }}
-                | {{ "Books" | translate }}
+                span.fa-fw {{ month.b || 0 }}
+                | {{ "Books" | translate:language.translator.current }}
+            md-divider
         md-item
             md-item-content
-                span.fa-fw {{ month.r }}
-                | {{ "Return visits" | translate }}
+                span.fa-fw {{ month.r || 0 }}
+                | {{ "Return visits" | translate:language.translator.current }}
+            md-divider
         md-item
             md-item-content
-                span.fa-fw {{ month.s }}
-                | {{ "Bible studies" | translate }}
+                span.fa-fw {{ month.s || 0 }}
+                | {{ "Bible studies" | translate:language.translator.current }}
