--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -15,7 +15,7 @@ $fa-font-path: "../fonts/font-awesome";
 //@import "stacked";
 @import "../components/fontawesome/scss/icons";
 
-body, button {
+body, html, button {
   color: #333;
 }
 
@@ -78,15 +78,6 @@ md-toolbar {
   }
 }
 
-md-toolbar.md-default-theme {
-  color: #fff;
-  background: $primary-color;
-}
-
-md-input-container.md-default-theme:not(.md-input-invalid).md-input-focused label {
-  color: $primary-color;
-}
-
 .md-subheader.md-primary {
   &.md-default-theme {
     color: #555;
@@ -96,9 +87,6 @@ md-input-container.md-default-theme:not(.md-input-invalid).md-input-focused labe
 
 .md-button {
   min-width: 48px;
-  &.md-default-theme.md-primary {
-    color: $primary-color;
-  }
 }
 
 .md-button
@@ -121,11 +109,31 @@ md-list.padded md-item md-item-content,
 md-item.padded md-item-content {
   padding-left: .5rem;
   padding-right: .5rem;
-  line-height: 2;
+  line-height: 2.67;
+}
+
+md-item-content {
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
 }
 
 .fa-fw {
   width: 2.28571em;
+}
+
+.ng-calendar-number, .ng-calendar-subhead-day {
+  padding: 4px;
+  color: #777;
+}
+
+md-item-content {
+  a {
+    line-height: 3.67;
+    display: block;
+    width: 100%;
+  }
 }
 
 @media (min-width: 960px) {
@@ -135,6 +143,15 @@ md-item.padded md-item-content {
     padding-right: 2em;
     line-height: 3;
   }
+  .ng-calendar-subhead-day {
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+
+  .ng-calendar-number {
+    padding: 12px;
+  }
+
 }
 
 .pull-right {
@@ -164,12 +181,6 @@ h3 {
   background: #f0f0f0;
 }
 
-.ng-calendar-number {
-  padding: 0;
-  color: #777;
-  font-weight: bold;
-}
-
 .ng-calendar-content {
 
 }
@@ -183,20 +194,19 @@ md-item {
   margin: 0;
 }
 
+.app-title {
+  img {
+    width: 2em;
+    margin-right: .5em;
+    vertical-align: middle;
+  }
+}
 md-toolbar.md-default-theme .md-button {
   color: #fff;
   &.icon {
     min-width: 3.167em;
     height: 3.167em;
     border-radius: 3.167em;
-    .app-title {
-      position: relative;
-      top: -0.5em;
-      line-height: 2.33;
-      height: 100%;
-      display: inline-block;
-      left: 1em;
-    }
   }
 }
 
@@ -205,6 +215,9 @@ md-toolbar, .md-toolbar-tools {
     img {
       max-height: 100% !important;
     }
+  }
+  h1, h2, h3, h4, h5, h6, p, i {
+    color: #fff;
   }
 }
 
@@ -241,18 +254,6 @@ textarea[auto-grow].md-input {
   background: #f9f9f9;
   border-bottom: 1px solid #eee;
   margin-right: 0;
-}
-
-md-slider {
-  .md-track {
-    background: #ccc;
-  }
-  .md-track.md-track-fill, .md-thumb:after {
-    background: $primary-color;
-  }
-  .md-thumb:after {
-    border-color: $primary-color;
-  }
 }
 
 .slider-container {
